--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://khuramshahzad-5335.githb.io/Component-L1_Exercise",
   "name": "level-1-exercise",
   "private": true,
   "version": "0.0.0",
